--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "nodemon": "^3.1.2"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.4.0"
   }
 }
